site/styles/_nav.scss
/* ... */
.navbar-nav-user-nav {
  width: 100%;

  @include media-breakpoint-up(lg) {
    width: auto;
  }

  .s72-dropdown-toggle {
    display: flex;
    padding-left: 0;
    padding-right: 20px;
    &:focus {
      box-shadow: none;
    }
    &:focus-visible {
      outline: 1px dotted $body-color;
      outline: 5px auto -webkit-focus-ring-color;
    }
  }

  .s72-dropdown-item {
    @extend .animate-this;
  }

  .s72-username {
    @include media-breakpoint-up(lg) {
      overflow: hidden;
      width: 124px;
    }
  }
}

.vertical-line {
  border-left: solid 1px rgba($color: $body-color, $alpha: .5);
  display: none;
  height: 25px;
  margin-left: 12px;

  @include media-breakpoint-up(lg) {
    align-self: center;
    display: block;
  }
}

.sub-nav {
  @extend .nav;

  background-color: transparent;
  display: flex;
  flex-basis: auto;
  flex-direction: column;
  font-family: $font-family-base;
  width: 100%;

  @include media-breakpoint-up(lg) {
    display: flex;
    flex-direction: row;
    padding-top: 15px;
    width: auto;
  }

  .nav-item {
    font-size: 16px;
    font-weight: $font-weight-normal;

    &.active .nav-link {
      color: $subnav-nav-item-hover-background-color;
      opacity: 1;

      @include media-breakpoint-up(lg) {
        border-bottom: 3px solid $subnav-nav-item-hover-background-color;
      }
    }
  }

  .nav-link {
    color: $subnav-nav-item-color;
    font-size: 16px;
    padding: 10px 0;
    transition: color .25s ease-out;

    @include media-breakpoint-up(lg) {
      border-bottom: 3px solid transparent;
      margin-right: 20px;
    }

    &:hover {
      color: $subnav-nav-item-hover-background-color;
    }
  }

  .s72-dropdown-toggle.nav-link {
    margin-right: 0;
    padding-right: 40px;
  }

  .dropdown-caret {
    @include media-breakpoint-up(lg) {
      right: 15px;
    }
  }
}

.s72-dropdown-toggle {
  &::after {
    display: none;
  }
}

.header-banner {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  position: relative;
  z-index: 10;
  background-color: $primary;
  height: 26px;

  .header-banner-message {
    font-size: 12px;
    margin-bottom: 0;
    @include media-breakpoint-up(xs) {
      font-size: 14px;
    }
  }
}

.no-scroll {
  .header-banner {
    opacity: 0.2;
    @include media-breakpoint-up(lg) {
      opacity: 1;
    }
  }
}

// Temporary fix due to header banner increasing height from top of page.
.navigation.show .header-banner + .navbar-brand-container-tablet {
  @include media-breakpoint-between(sm, lg) {
    top: 36px;
  }
}

